# agno

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  france_news_May_2025.md  test_auto_register.py
libs/agno/: pyproject.toml  requirements.txt
libs/agno/agno/: exceptions.py  media.py
libs/agno/agno/agent/: .agent.py.swp  __init__.py  agent.py  metrics.py
libs/agno/agno/api/: agent.py  app.py  evals.py  playground.py  routes.py  team.py  workflows.py  workspace.py
libs/agno/agno/api/schemas/: agent.py  app.py  evals.py  team.py  user.py  workflows.py
libs/agno/agno/app/: base.py  settings.py  utils.py
libs/agno/agno/app/agui/: __init__.py  app.py  async_router.py  sync_router.py  utils.py
libs/agno/agno/app/discord/: __init__.py  client.py
libs/agno/agno/app/fastapi/: __init__.py  app.py  async_router.py  serve.py  sync_router.py
libs/agno/agno/app/playground/: app.py  async_router.py  operator.py  schemas.py  sync_router.py  utils.py
libs/agno/agno/app/slack/: __init__.py  app.py  async_router.py  sync_router.py
libs/agno/agno/app/whatsapp/: __init__.py  app.py  async_router.py  security.py  serve.py  settings.py  sync_router.py
libs/agno/agno/cli/: auth_server.py  config.py  operator.py  settings.py
libs/agno/agno/document/: __init__.py
libs/agno/agno/document/chunking/: agentic.py  fixed.py  markdown.py  recursive.py  row.py  semantic.py
libs/agno/agno/document/reader/: __init__.py  arxiv_reader.py  base.py  csv_reader.py  docx_reader.py  firecrawl_reader.py  json_reader.py  markdown_reader.py  pdf_reader.py  text_reader.py  url_reader.py  website_reader.py  youtube_reader.py
libs/agno/agno/embedder/: __init__.py  aws_bedrock.py  azure_openai.py  cohere.py  fastembed.py  google.py  huggingface.py  jina.py  langdb.py  mistral.py  nebius.py  ollama.py  openai.py  sentence_transformer.py  voyageai.py
libs/agno/agno/eval/: accuracy.py  perf.py  performance.py  reliability.py  utils.py
libs/agno/agno/file/: __init__.py
libs/agno/agno/file/local/: csv.py
libs/agno/agno/knowledge/: __init__.py  agent.py  arxiv.py  combined.py  csv.py  csv_url.py  document.py  docx.py  firecrawl.py  json.py  langchain.py  light_rag.py  markdown.py  pdf.py  pdf_bytes.py  pdf_url.py  text.py  url.py  website.py  wikipedia.py  youtube.py
libs/agno/agno/knowledge/gcs/: base.py  pdf.py
libs/agno/agno/knowledge/s3/: base.py  pdf.py  text.py
libs/agno/agno/memory/: __init__.py  agent.py  classifier.py  manager.py  memory.py  summarizer.py  team.py  workflow.py
libs/agno/agno/memory/db/: __init__.py  mongodb.py  postgres.py  sqlite.py
libs/agno/agno/memory/v2/: __init__.py  manager.py  memory.py  schema.py  summarizer.py
libs/agno/agno/models/: base.py  message.py  response.py
libs/agno/agno/models/aimlapi/: __init__.py  aimlapi.py
libs/agno/agno/models/anthropic/: claude.py
libs/agno/agno/models/aws/: __init__.py  bedrock.py  claude.py
libs/agno/agno/models/azure/: __init__.py  ai_foundry.py  openai_chat.py
libs/agno/agno/models/cerebras/: cerebras.py  cerebras_openai.py
libs/agno/agno/models/cohere/: chat.py
libs/agno/agno/models/dashscope/: dashscope.py
libs/agno/agno/models/deepinfra/: __init__.py  deepinfra.py
libs/agno/agno/models/deepseek/: deepseek.py
libs/agno/agno/models/fireworks/: fireworks.py
libs/agno/agno/models/google/: __init__.py  gemini.py
libs/agno/agno/models/groq/: groq.py
libs/agno/agno/models/huggingface/: huggingface.py
libs/agno/agno/models/ibm/: __init__.py  watsonx.py
libs/agno/agno/models/internlm/: internlm.py
libs/agno/agno/models/langdb/: langdb.py
libs/agno/agno/models/litellm/: __init__.py  chat.py  litellm_openai.py
libs/agno/agno/models/lmstudio/: __init__.py  lmstudio.py
libs/agno/agno/models/meta/: __init__.py  llama.py  llama_openai.py
libs/agno/agno/models/mistral/: mistral.py
libs/agno/agno/models/nebius/: nebius.py
libs/agno/agno/models/nvidia/: nvidia.py
libs/agno/agno/models/ollama/: __init__.py  chat.py  tools.py
libs/agno/agno/models/openai/: __init__.py  chat.py  like.py  responses.py
libs/agno/agno/models/openrouter/: openrouter.py
libs/agno/agno/models/perplexity/: perplexity.py
libs/agno/agno/models/portkey/: portkey.py
libs/agno/agno/models/qwen/: __init__.py
libs/agno/agno/models/vercel/: __init__.py  (+1 more)
libs/agno/agno/playground/: __init__.py  async_router.py  deploy.py  operator.py  playground.py  schemas.py  serve.py  settings.py  sync_router.py
libs/agno/agno/reasoning/: azure_ai_foundry.py  deepseek.py  default.py  groq.py  helpers.py  ollama.py  openai.py  step.py
libs/agno/agno/reranker/: __init__.py  infinity.py  sentence_transformer.py
libs/agno/agno/run/: base.py  response.py  team.py  workflow.py
libs/agno/agno/storage/: base.py  dynamodb.py  firestore.py  gcs_json.py  in_memory.py  json.py  mongodb.py  mysql.py  postgres.py  redis.py  singlestore.py  sqlite.py  yaml.py
libs/agno/agno/team/: __init__.py  team.py
libs/agno/agno/tools/: agentql.py  airflow.py  api.py  apify.py  arxiv.py  aws_lambda.py  aws_ses.py  azure_openai.py  baidusearch.py  bitbucket.py  brandfetch.py  bravesearch.py  brightdata.py  browserbase.py  calcom.py  calculator.py  cartesia.py  clickup_tool.py  confluence.py  crawl4ai.py  csv_toolkit.py  dalle.py  daytona.py  decorator.py  desi_vocal.py  discord.py  docker.py  duckdb.py  duckduckgo.py  e2b.py  eleven_labs.py  email.py  evm.py  exa.py  fal.py  file.py  financial_datasets.py  firecrawl.py  function.py  giphy.py  (+68 more)
libs/agno/agno/utils/: audio.py  events.py  functions.py  gemini.py  git.py  http.py  json_io.py  json_schema.py  location.py  log.py  mcp.py  media.py  message.py  openai.py  openai_responses.py  pprint.py  prompts.py  pyproject.py  response.py  string.py  timer.py  tools.py  whatsapp.py
libs/agno/agno/vectordb/: base.py
libs/agno/agno/workflow/: __init__.py  workflow.py
libs/agno/agno/workspace/: config.py  helpers.py  operator.py  settings.py
libs/agno/scripts/: format.bat  test.bat  test.sh  validate.bat
libs/agno/tests/integration/: conftest.py
libs/agno/tests/unit/: response.py
(+1993 files in other folders)
